--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cctv">
+    package="com.sgct.cctv">
    <application
         android:label="cctv"
         android:name="${applicationName}"
