--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,10 @@ android {
     }
 }
 
+dependencies {
+		implementation files('../../cctv_libs/INetSDK.jar')
+}
+
 flutter {
     source '../..'
 }
